second day class

--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trey</title>
+    <style>
+        h4{
+            color: brown;
+            width: 200px;
+            font-size: large;
+        }
+        .b_bg{
+            background-color: white;
+        }
+    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Trey Schneider</h1>
+<body style="font-family: Arial, Helvetica, sans-serif; background-color: beige;">
+    <h1 class="test">Trey Schneider</h1>
     <hr>
     <br>
     <h4>About:</h4>
-    <p>I was born and raised in Omaha Nebraska. I was in the navy for four years as a <mark>avionics tech</mark>. After that I got training through Rockwell Automation to be a <mark>automation and controls engineer</mark>. After two years of working for Groupo Bimbo automating their bread lines I quit to learn software development. I've done some work with python, MySQL, CSS, HTML.</p>
+    <p class="b_bg">I was born and raised in Omaha Nebraska. I was in the navy for four years as a <mark>avionics tech</mark>. After that I got training through Rockwell Automation to be a <mark>automation and controls engineer</mark>. After two years of working for Groupo Bimbo automating their bread lines I quit to learn software development. I've done some work with python, MySQL, CSS, HTML.</p>
     <br>
     <h4>Things I hope to get out of this program:</h4>
     <ul>
