Added main paige contacts page and projects page

--- a/index.html
+++ b/index.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trey</title>
-    <style>
-        h4{
-            color: brown;
-            width: 200px;
-            font-size: large;
-        }
-        .b_bg{
-            background-color: white;
-        }
-    </style>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="font-family: Arial, Helvetica, sans-serif; background-color: beige;">
-    <h1 class="test">Trey Schneider</h1>
-    <hr>
-    <br>
-    <h4>About:</h4>
-    <p class="b_bg">I was born and raised in Omaha Nebraska. I was in the navy for four years as a <mark>avionics tech</mark>. After that I got training through Rockwell Automation to be a <mark>automation and controls engineer</mark>. After two years of working for Groupo Bimbo automating their bread lines I quit to learn software development. I've done some work with python, MySQL, CSS, HTML.</p>
-    <br>
-    <h4>Things I hope to get out of this program:</h4>
-    <ul>
-        <li>Learn Javascript</li>
-        <li>learn React</li>
-        <li>Class based views in Django</li>
-        <li>Better understand Bootstrap</li>
-    </ul>
+<body> 
+    <header class="global">
+        <div class="main-info">
+            <H1>Software Developer</H1>
+            <H3>Trey Schneider</H3>
+            <p>La Paz, Mexico</p>
+        </div>
+        <nav class="nav-bar">
+            <a href="bio.html" class="a-nav">Bio</a>
+            <a href="contacts.html" class="a-nav">Contact info</a>
+            <a href="projects.html" class="a-nav">projects</a>
+        </nav>
+    </header>
+    <main>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa reiciendis soluta eaque, autem praesentium et recusandae debitis temporibus libero, cumque itaque unde odit, tempore a. Eaque inventore sint est? Nam.</p>
+        <br>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa ab laudantium assumenda nam voluptatibus voluptatum totam exercitationem velit architecto quidem, delectus, dignissimos temporibus eveniet veritatis ad beatae aliquam libero magni.</p>        
+    </main>
 </body>
+<footer>
+
+</footer>
 </html>
