made contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -8,16 +8,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <Header>
-        <h1>Trey Schneider</h1>
-    </Header>
+    <header class="global">
+        <div class="main-info">
+            <H1>Software Developer</H1>
+            <H3>Trey Schneider</H3>
+            <p>La Paz, Mexico</p>
+        </div>
+        <nav class="nav-bar">
+            <a href="bio.html" class="a-nav">Bio</a>
+            <a href="contacts.html" class="a-nav">Contact info</a>
+            <a href="projects.html" class="a-nav">projects</a>
+        </nav>
+    </header>
     <main>
-        <ul class="contact-list">
-            <li>Phone: (402)670-8231</li>
-            <li>address: 4075 Park Blvd Apt 707</li>
-            <li>Email: tschneid95@gmail.com</li>
-        </ul>
-        <a href="index.html"><button>Home</button></a>
+        <div class="center-container">
+            <div class="info">
+                <h2>contact info</h2>
+            </div>
+            <div class="body-text">
+                <ul class="contact-list">
+                    <li>🤙Phone (783)265-4221</li>
+                    <li>🏡address road city state</li>
+                    <li>📨Email email@email.com</li>
+                </ul>
+            </div>
+            <div class="info">
+                <h2>social media</h2>
+            </div>
+            <div class="body-text">
+                <ul class="contact-list">
+                    <li>Linkedin: <a href="https://www.linkedin.com/signup/cold-join?session_redirect=https%3A%2F%2Fwww%2Elinkedin%2Ecom%2Ffeed%2F&trk=login_reg_redirect">Linkedin page</a></li>
+                    <li>Facebook: <a href="https://www.facebook.com">Facebook page</a></li>
+                    <li>Instagram: <a href="https://www.instagram.com">Instagram page</a></li>
+                </ul>
+            </div>
+            <a href="index.html"><button>Home</button></a>
+        </div>
     </main>
 </body>
 </html>
