--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
         </nav>
     </header>
     <main>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa reiciendis soluta eaque, autem praesentium et recusandae debitis temporibus libero, cumque itaque unde odit, tempore a. Eaque inventore sint est? Nam.</p>
-        <br>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa ab laudantium assumenda nam voluptatibus voluptatum totam exercitationem velit architecto quidem, delectus, dignissimos temporibus eveniet veritatis ad beatae aliquam libero magni.</p>        
+        <div id="bg">
+            <img src="img/IMG_0858.jpeg" alt="">
+        </div>
+        <div class="body-text">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa reiciendis soluta eaque, autem praesentium et recusandae debitis temporibus libero, cumque itaque unde odit, tempore a. Eaque inventore sint est? Nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum iure esse id? Similique doloremque dignissimos quod asperiores laborum harum nulla! Distinctio vero expedita vitae maiores fuga laborum ab illum ad!</p>
+            <br>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa ab laudantium assumenda nam voluptatibus voluptatum totam exercitationem velit architecto quidem, delectus, dignissimos temporibus eveniet veritatis ad beatae aliquam libero magni. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum, fugit mollitia veniam architecto sit, sequi doloribus odio sapiente unde voluptas fuga cupiditate rerum autem nulla harum sunt. Id, provident ipsam?</p>        
+        </div>
     </main>
 </body>
 <footer>
